# COT

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
cot/: __init__.py  align.py  cli.py  config.py  disclaimers.py  fetch.py  transform.py  viz.py  viz_interactive.py
tests/: conftest.py  test_alignment.py  test_causal_window.py  test_chart_fidelity.py  test_cot_index.py  test_edge_cases.py  test_export_and_report.py  test_fetch_incremental.py  test_matching.py  test_pipeline_integrity.py  test_tff.py  test_transform.py
